--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <!-- 우주 배경 -->
   <div id="space"></div>
 
+  <div id="stars"></div>
+
+
   <!-- 중앙 UI -->
   <div class="center-ui">
     <button class="arrow left" onclick="rotateLeft()">◀</button>
