--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <button class="arrow left" onclick="rotateLeft()">◀</button>
 
     <div class="earth">
-      <div class="earth-glow"></div>
+      <div class="earth-continents"></div>
+      <div class="earth-atmosphere"></div>
     </div>
 
     <button class="arrow right" onclick="rotateRight()">▶</button>
