--- a/index.html
+++ b/index.html
@@ -86,17 +86,17 @@
 
   <!-- CENTER UI -->
   <div class="center-ui">
-    <button class="arrow">&#9664;</button>
+    <button class="arrow" id="prev">&#9664;</button>
 
     <div class="earth">
       <div class="earth-atmosphere"></div>
     </div>
 
-    <button class="arrow">&#9654;</button>
+    <button class="arrow" id="next">&#9654;</button>
   </div>
 
   <!-- MENU TEXT -->
-  <div class="menu">Home</div>
+  <div class="menu" id="menuText">Home</div>
 
   <!-- STAR GENERATION -->
   <script>
