--- a/index.html
+++ b/index.html
@@ -3,33 +3,24 @@
 <head>
   <meta charset="UTF-8" />
   <title>Solar System</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="assets/css/solar.css" />
 </head>
 <body>
 
-<div id="universe">
-  <div id="stars"></div>
-  <div id="meteors"></div>
+<div id="stars"></div>
+<div id="nebula"></div>
 
-  <div id="solar-system">
-    <div class="sun"></div>
+<div id="solar-system">
+  <div class="sun"></div>
 
-    <div class="orbit mercury"><div class="planet"></div></div>
-    <div class="orbit venus"><div class="planet"></div></div>
-    <div class="orbit earth"><div class="planet"></div></div>
-    <div class="orbit mars"><div class="planet"></div></div>
-    <div class="orbit jupiter"><div class="planet"></div></div>
-
-    <div class="orbit saturn">
-      <div class="planet">
-        <div class="ring"></div>
-      </div>
-    </div>
-
-    <div class="orbit uranus"><div class="planet"></div></div>
-    <div class="orbit neptune"><div class="planet"></div></div>
-  </div>
+  <div class="orbit mercury"><div class="planet"></div></div>
+  <div class="orbit venus"><div class="planet"></div></div>
+  <div class="orbit earth"><div class="planet"></div></div>
+  <div class="orbit mars"><div class="planet"></div></div>
+  <div class="orbit jupiter"><div class="planet"></div></div>
+  <div class="orbit saturn"><div class="planet ring"></div></div>
+  <div class="orbit uranus"><div class="planet"></div></div>
+  <div class="orbit neptune"><div class="planet"></div></div>
 </div>
 
 <script src="assets/js/solar.js"></script>
