--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="assets/css/solar.css" />
 </head>
 <body>
-
+<canvas id="starfield"></canvas>
 <div id="stars"></div>
 <div id="nebula"></div>
 
@@ -24,5 +24,6 @@
 </div>
 
 <script src="assets/js/solar.js"></script>
+<script src="assets/js/stars.js"></script>
 </body>
 </html>
