--- a/index.html
+++ b/index.html
@@ -1,46 +1,24 @@
 <body>
 
-  <!-- 별 배경 -->
+  <!-- ⭐ 별 배경 -->
   <canvas id="starfield"></canvas>
 
-  <!-- 태양계 전체 -->
+  <!-- ☀ 태양계 -->
   <div id="solar-system">
-
     <div class="sun"></div>
 
-    <div class="orbit mercury">
-      <div class="planet"></div>
-    </div>
-
-    <div class="orbit venus">
-      <div class="planet"></div>
-    </div>
-
-    <div class="orbit earth">
-      <div class="planet"></div>
-    </div>
-
-    <div class="orbit mars">
-      <div class="planet"></div>
-    </div>
-
-    <div class="orbit jupiter">
-      <div class="planet"></div>
-    </div>
+    <div class="orbit mercury"><div class="planet"></div></div>
+    <div class="orbit venus"><div class="planet"></div></div>
+    <div class="orbit earth"><div class="planet"></div></div>
+    <div class="orbit mars"><div class="planet"></div></div>
+    <div class="orbit jupiter"><div class="planet"></div></div>
 
     <div class="orbit saturn">
       <div class="planet"></div>
-      <div class="ring"></div>
     </div>
 
-    <div class="orbit uranus">
-      <div class="planet"></div>
-    </div>
-
-    <div class="orbit neptune">
-      <div class="planet"></div>
-    </div>
-
+    <div class="orbit uranus"><div class="planet"></div></div>
+    <div class="orbit neptune"><div class="planet"></div></div>
   </div>
 
   <script src="assets/js/stars.js"></script>
