--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+  <meta charset="UTF-8" />
+  <title>Solar System</title>
+  <link rel="stylesheet" href="assets/css/space.css" />
+</head>
+
 <body>
+  <!-- ⭐ 별 배경 -->
   <canvas id="starfield"></canvas>
 
+  <!-- ☀ 태양계 -->
   <div id="solar-system">
     <div class="sun"></div>
 
@@ -17,3 +27,4 @@
   <script src="assets/js/stars.js"></script>
   <script src="assets/js/zoom.js"></script>
 </body>
+</html>
