--- a/index.html
+++ b/index.html
@@ -3,27 +3,28 @@
 <head>
   <meta charset="UTF-8" />
   <title>Solar System</title>
-  <link rel="stylesheet" href="space.css" />
-</head>
 
+  <link rel="stylesheet" href="assets/css/space.css" />
+</head>
 <body>
+
   <!-- ⭐ 별 배경 -->
   <canvas id="starfield"></canvas>
 
   <!-- ☀ 태양계 -->
-  <div id="scene">
-    <div id="solar-system">
-      <div class="sun"></div>
+  <div id="solar-system">
 
-      <div class="orbit mercury"><div class="planet"></div></div>
-      <div class="orbit venus"><div class="planet"></div></div>
-      <div class="orbit earth"><div class="planet"></div></div>
-      <div class="orbit mars"><div class="planet"></div></div>
-      <div class="orbit jupiter"><div class="planet"></div></div>
-      <div class="orbit saturn"><div class="planet ringed"></div></div>
-      <div class="orbit uranus"><div class="planet"></div></div>
-      <div class="orbit neptune"><div class="planet"></div></div>
-    </div>
+    <div class="sun"></div>
+
+    <div class="orbit mercury"><div class="planet"></div></div>
+    <div class="orbit venus"><div class="planet"></div></div>
+    <div class="orbit earth"><div class="planet"></div></div>
+    <div class="orbit mars"><div class="planet"></div></div>
+    <div class="orbit jupiter"><div class="planet"></div></div>
+    <div class="orbit saturn"><div class="planet"></div></div>
+    <div class="orbit uranus"><div class="planet"></div></div>
+    <div class="orbit neptune"><div class="planet"></div></div>
+
   </div>
 
   <script src="assets/js/stars.js"></script>
